<resources>
    <string name="app_name">Groovy</string>
    <string name="buttonText">Згенерувати</string>
    <string name="mainText">Генератор Паролів</string>
    <string name="inputSite">Призначення(сайт)</string>
    <string name="inputMaster">Логін/Е-Мейл</string>
    <string name="inputLength">Довжина</string>
    <string name="outputPassword">| Password |</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_password">Generate Password</string>
    <string name="web_site_name">Web-Site Name</string>
    <string name="master_password">Master Password</string>
    <string name="length">Length</string>
    <string name="generate" translatable="true">GENERATE</string>
    <string name="not_yet_introduced">Not yet introduced</string>
    <string name="soon">Soon</string>
    <string name="hint">*</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
</resources>