<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp"
                android:background="@drawable/round_back_white10_20"
                android:backgroundTint="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alexandria_bold"
                    android:text="@string/generate_password"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:fontFamily="@font/alexandria_light"
                    android:text="@string/generate_password"
                    android:textSize="14sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:fontFamily="@font/alexandria_semibold"
                    android:text="@string/web_site_name"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/siteInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/password_eye"
                    android:fontFamily="@font/alexandria"
                    android:hint="@string/hint"
                    android:inputType="text" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:fontFamily="@font/alexandria_semibold"
                    android:text="@string/master_password"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/masterPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/key"
                    android:fontFamily="@font/alexandria"
                    android:hint="@string/hint"
                    android:inputType="text" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:fontFamily="@font/alexandria_semibold"
                    android:text="@string/length"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passLengthInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/length"
                    android:fontFamily="@font/alexandria"
                    android:hint="@string/hint"
                    android:inputType="number" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/generateButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/alexandria_semibold"
                    android:text="@string/generate"
                    android:textSize="14sp"
                    app:cornerRadius="4dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardBackgroundColor="@color/colorPassword"
                    app:cardCornerRadius="4dp">

                    <TextView
                        android:id="@+id/generatedPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
    android:text="@string/outputPassword"

                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/alexandria_bold"
                        android:textAlignment="center"
                        android:textSize="14sp"
                        tools:ignore="RtlCompat" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</FrameLayout>